--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,cmf)
 S3method(summary,cmf)
 export(cmf)
 export(generateMed)
+export(setCutoff)
 importFrom(graphics,abline)
 importFrom(graphics,barplot)
 importFrom(stats,cor)
