--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Suggests: MASS,
     pbapply,
     parallel,
     crayon,
-    changepoint,
-    Matrix
+    changepoint
 RoxygenNote: 6.0.1
+Imports: Matrix,
+    sparseMVN
