--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,12 @@ Description: This package implements simultaneous discovery of multiple
 License: MIT + file LICENCE
 Encoding: UTF-8
 LazyData: true
-Suggests: MASS,
-    pbapply,
-    parallel,
-    crayon,
+Suggests: crayon,
     changepoint
 RoxygenNote: 6.0.1
 Imports: Matrix,
-    sparseMVN
+    sparseMVN,
+    expm,
+    pbapply,
+    MASS,
+    parallel
