fix build error in documentation, namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(generateMed)
 export(setCutoff)
 import(Matrix)
 importFrom(graphics,abline)
+importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(stats,cor)
 importFrom(stats,cov)
