--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,19 @@ S3method(plot,cmf)
 S3method(print,cmf)
 S3method(screeplot,cmf)
 S3method(summary,cmf)
+S3method(update,cmf)
 export(cmf)
 export(generateMed)
 export(setCutoff)
 import(Matrix)
+importFrom(Rcpp,evalCpp)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,qnorm)
+importFrom(stats,qt)
 importFrom(stats,rnorm)
 importFrom(stats,screeplot)
+useDynLib(cmfilter, .registration=TRUE)
