--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,qnorm)
 importFrom(stats,qt)
+importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,screeplot)
 useDynLib(cmfilter, .registration=TRUE)
