--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,18 @@ cache: packages
 r:
   - release
   - devel
+
+language: r
+latex: false
+fortran: false
+
+matrix:
+  include:
+    - os: linux
+      r: release
+    - os: linux
+      r: devel
+    - os: osx
+      r: release
+    - os: osx
+      r: devel
