--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
+importFrom(graphics,text)
 importFrom(stats,cor)
 importFrom(stats,cov)
 importFrom(stats,qnorm)
