Added mock data, edited tests, version bump

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cmfilter
 Type: Package
 Title: Coordinate-Wise Mediation Filter
-Version: 0.4.0
+Version: 0.5.0
 Date: 2018-09-14
 Author: Erik-Jan van Kesteren <e.vankesteren1@uu.nl>
 Maintainer: Erik-Jan van Kesteren <e.vankesteren1@uu.nl>
@@ -10,7 +10,8 @@ Description: Simultaneous discovery of multiple mediators in an x -> M -> y
 License: MIT + file LICENCE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
+Depends: R (>= 2.10)
 Imports: Matrix,
     sparseMVN,
     expm,
