--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,10 @@ Version: 0.9.0
 Date: 2019-04-09
 Author: Erik-Jan van Kesteren <e.vankesteren1@uu.nl>
 Maintainer: Erik-Jan van Kesteren <e.vankesteren1@uu.nl>
-Description: Simultaneous discovery of multiple mediators in an x -> M -> y 
-  system using Coordinate-wise Mediation Filtering.
+Description: Functions to discover, plot, and select multiple mediators 
+  from an x -> M -> y linear system. This exploratory mediation analysis 
+  is performed using the Coordinate-wise Mediation Filter as introduced 
+  by Van Kesteren and Oberski (2019) <arXiv: 1810.06334>.
 License: MIT + file LICENCE
 Encoding: UTF-8
 LazyData: true
